--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -48,47 +48,47 @@ xftfont Droid Sans Mono:size=11
 xftalpha 0.8
 
 TEXT
-${image /home/user/linux.png -p 690,0}${goto 350}${color}$sysname $kernel on $machine ${color grey}
-${color grey}${goto 350}Uptime:$color $uptime${color}
-${goto 350}${color grey}Battery: ${color}${battery_short} ${battery_temp}°C ${battery_volts}mV
-${color}${goto 350}${color grey}Cell Radio: $color ${cell_radio_dbm}dBm ${cell_radio_percent}%
-${color grey}CPU:${goto 45}${color red}${voffset 2}${cpubar cpu0 14,240}${goto 300}${color grey}Load 1/5/15:$color $loadavg ${alignr }${color grey}Processes:$color $processes ${color grey}Running:$color $running_processes
+${image /home/user/linux.png -p 680,0}${goto 350}${color}$sysname $kernel on $machine ${color grey}
+${color grey}${goto 350}Uptime:$color $uptime${color}${color}${goto 500}${color grey}Cell Radio: $color ${cell_radio_dbm}dBm ${cell_radio_percent}%
+${color grey}${goto 350}Battery: ${color}${battery_short} ${battery_temp}°C ${battery_volts}mV
+${color grey}CPU:${goto 48}${color red}${voffset 2}${cpubar cpu0 14,240}${goto 300}${color grey}Load 1/5/15:$color $loadavg ${goto 500}${color grey}Processes:$color $processes ${color grey}Running:$color $running_processes
 ${color       }${alignr 460}${voffset -20}$cpu%${voffset 0}#can't alignr two things on the same line. alignr is the only way to get the % symbol to stay lined up. it will move if you use goto
 ${color       }${goto 119}$freq MHz
-${color grey}CPU:${color black}${cpugraph 16,240 ffffff ff0000 -t}${color grey}${goto 300}Load1 avg:${color black}${loadgraph 16,105 ffffff ff0000 -t -1}${color grey} Dio:${color black}${diskiograph /dev/mmcblk0 16,105 ffffff 00ff00 -t -1}${color grey} Mem:${color black}${memgraph 16,105 ffffff 0000ff -t}
-${color grey}RAM:${goto 47}${color blue}${voffset 2}${membar 16,240}
+${color grey}RAM:${goto 48}${color blue}${voffset 2}${membar 16,240}${color grey}${goto 300}CPU:  ${color black}${cpugraph 16,105 ffffff ff0000 -t}${color grey}${goto 500}Load1 avg:${color black}${loadgraph 16,105 ffffff ff0000 -t -1}
 ${color       }${voffset -20}${goto 110}$mem${goto 160}/ $memmax
 ${color       }${alignr 525}${voffset -18}$memperc%
-${color grey}${voffset -18}${goto 315} Top I/O ${goto 480}READ ${goto 550}WRITE ${goto 630}%
-${color grey}Swap:${goto 48}${color green}${swapbar 16,240}                     
+${color grey}Swap:${goto 48}${color green}${swapbar 16,240}${color grey}${goto 300}Dio:    ${color black}${diskiograph /dev/mmcblk0 16,105 ffffff 00ff00 -t -1}${color grey}${goto 500}Mem:         ${color black}${memgraph 16,105 ffffff 0000ff -t}
 ${color       }${voffset -19}${goto 110}$swap${goto 160}/ $swapmax
 ${color       }${alignr 525}${voffset -18}$swapperc%
-${color red}${voffset -18}${goto 315} ${top_io name 1} ${goto 480}${top_io io_read 1}${goto 550}${top_io io_write 1}${goto 610}${top_io io_perc 1}
-${color grey}rootfs:${goto 70}${color darkgreen}${fs_bar 16,240 /}
-${color       }${voffset -18}${goto 110}${fs_used /}${goto 160}/ ${fs_size /}
-${color       }${alignr 490}${voffset -20}(${fs_free /})
-${color       }${voffset -18}${goto 315} ${top_io name 2} ${goto 480}${top_io io_read 2}${goto 550}${top_io io_write 2}${goto 610}${top_io io_perc 2}
-${color grey}home:${goto 70}${color darkgreen}${fs_bar 16,240 /home}
-${color       }${voffset -19}${goto 110}${fs_used /home}${goto 160}/ ${fs_size /home}
-${color       }${alignr 490}${voffset -20}(${fs_free /home})
-${color       }${voffset -18}${goto 315} ${top_io name 3} ${goto 480}${top_io io_read 3}${goto 550}${top_io io_write 3}${goto 610}${top_io io_perc 3}
-${voffset 1}${if_mounted /home/user/MyDocs}${color grey}MyDocs:${goto 70}${color darkgreen}${fs_bar 16,240 /home/user/MyDocs}
-${color       }${voffset -19}${goto 110}${fs_used /home/user/MyDocs}${goto 160}/ ${fs_size /home/user/MyDocs}
-${color       }${alignr 490}${voffset -19}(${fs_free /home/user/MyDocs})$endif
-${if_mounted /media/mmc1}${color grey}MicroSD:${goto 70}${color darkgreen}${fs_bar 16,240 /media/mmc1}
-${color       }${voffset -18}${goto 110}${fs_used /media/mmc1}${goto 160}/ ${fs_size /media/mmc1}
-${color       }${alignr 490}${voffset -20}(${fs_free /media/mmc1})$endif
+$color----------------------------------------------------------------------------------------------------------------
+${color grey}Top CPU%          CPU%  MEM%       ${goto 215}${color grey} | ${color grey}Top Total Mem.  RAM     VM                               ${goto 440}${color grey}| ${color grey}Top CPU TIME     MM:SS.cs
+${color red}${top name 1}${goto 115}${top cpu 1}${top mem 1} ${goto 215}${color grey} | ${color red}${top_mem name 1}${goto 340}${top_mem mem_res 1}  ${top_mem mem_vsize 1} ${goto 440}${color grey}| ${color red}${top_time name 1}${goto 560}${top_time time 1} ${top_time cpu 1}
+$color${top name 2}${goto 115}${top cpu 2}${top mem 2}       ${goto 215}${color grey} | ${color    }${top_mem name 2}${goto 340}${top_mem mem_res 2}  ${top_mem mem_vsize 2} ${goto 440}${color grey}| ${color    }${top_time name 2}${goto 560}${top_time time 2} ${top_time cpu 2}
+$color${top name 3}${goto 115}${top cpu 3}${top mem 3}       ${goto 215}${color grey} | ${color    }${top_mem name 3}${goto 340}${top_mem mem_res 3}  ${top_mem mem_vsize 3} ${goto 440}${color grey}| ${color    }${top_time name 3}${goto 560}${top_time time 3} ${top_time cpu 3}
+$color${top name 4}${goto 115}${top cpu 4}${top mem 4}       ${goto 215}${color grey} | ${color    }${top_mem name 4}${goto 340}${top_mem mem_res 4}  ${top_mem mem_vsize 4} ${goto 440}${color grey}| ${color    }${top_time name 4}${goto 560}${top_time time 4} ${top_time cpu 4}
+
+${color grey}${goto 170}rootfs:${goto 240}${color darkgreen}${fs_bar 16,240 /}
+${color       }${voffset -18}${goto 280}${fs_used /}${goto 330}/ ${fs_size /}
+${color       }${alignr 320}${voffset -20}(${fs_free /})
+${color grey}${goto 170}home:${goto 240}${color darkgreen}${fs_bar 16,240 /home}
+${color       }${voffset -19}${goto 280}${fs_used /home}${goto 330}/ ${fs_size /home}
+${color       }${alignr 320}${voffset -20}(${fs_free /home})
+${voffset 1}${if_mounted /home/user/MyDocs}${color grey}${goto 170}MyDocs:${goto 240}${color darkgreen}${fs_bar 16,240 /home/user/MyDocs}
+${color       }${voffset -19}${goto 280}${fs_used /home/user/MyDocs}${goto 330}/ ${fs_size /home/user/MyDocs}
+${color       }${alignr 320}${voffset -19}(${fs_free /home/user/MyDocs})$endif
+${if_mounted /media/mmc1}${color grey}${goto 170}MicroSD:${goto 240}${color darkgreen}${fs_bar 16,240 /media/mmc1}
+${color       }${voffset -18}${goto 280}${fs_used /media/mmc1}${goto 330}/ ${fs_size /media/mmc1}
+${color       }${alignr 320}${voffset -20}(${fs_free /media/mmc1})$endif
+${color grey}Top I/O ${goto 130}READ ${goto 180}WRITE ${goto 250}%
+${color red}${top_io name 1} ${goto 130}${top_io io_read 1}${goto 180}${top_io io_write 1}${goto 230}${top_io io_perc 1}
+${color       }${top_io name 2} ${goto 130}${top_io io_read 2}${goto 180}${top_io io_write 2}${goto 230}${top_io io_perc 2}
+${color       }${top_io name 3} ${goto 130}${top_io io_read 3}${goto 180}${top_io io_write 3}${goto 230}${top_io io_perc 3}
+${color       }${top_io name 4} ${goto 130}${top_io io_read 4}${goto 180}${top_io io_write 4}${goto 230}${top_io io_perc 4}
 ${if_up gprs0}${color grey}gprs0: ${color grey}Up:$color ${upspeed gprs0}/s [${totaldown gprs0}] ${color grey}Down:$color ${downspeed gprs0}/s [${totalup gprs0}] 
-${color grey}gprs0 Up: ${color black}${upspeedgraph gprs0 20,290 ff0000 00ff00}$alignr${color grey}gprs0 Down: ${color black}${downspeedgraph gprs0 20,290 00ff0000 ff0000}$else${if_empty ${wireless_essid wlan0}}$else${color grey}wlan0 ESSID: $color${wireless_essid wlan0} ${color grey}Rate: ${color}${wireless_bitrate wlan0} ${color grey}Connection Quality: $color${wireless_link_qual_perc wlan0}% ${color grey}Up:$color ${upspeed wlan0}/s [${totaldown wlan0}] ${color grey} ${color grey}Down:$color ${downspeed wlan0}/s [${totalup wlan0}]
-${color grey}wlan0 Up: ${color black}${upspeedgraph wlan0 20,290 00ff00 ff0000}$alignr${color grey}wlan0 Down: ${color black}${downspeedgraph wlan0 20,290 ff0000 00ff00}$endif$endif
+${color grey}gprs0 Up: ${color black}${upspeedgraph gprs0 16,105 ff0000 00ff00}$alignr${color grey}gprs0 Down: ${color black}${downspeedgraph gprs0 16,105 00ff0000 ff0000}$else${if_empty ${wireless_essid wlan0}}$else${color grey}wlan0 ESSID: $color${wireless_essid wlan0} ${color grey}Rate: ${color}${wireless_bitrate wlan0} ${color grey}Connection Quality: $color${wireless_link_qual_perc wlan0}% ${color grey}Up:$color ${upspeed wlan0}/s [${totaldown wlan0}] ${color grey} ${color grey}Down:$color ${downspeed wlan0}/s [${totalup wlan0}]
+${color grey}wlan0 Up: ${color black}${upspeedgraph wlan0 16,105 00ff00 ff0000}$alignr${color grey}wlan0 Down: ${color black}${downspeedgraph wlan0 16,105 ff0000 00ff00}$endif$endif
 ${color grey}CONNECTIONS [$color${tcp_portmon 1 65535 count}${color grey}] (lport:rservice:rport):$color                                            ${goto 405}${tcp_portmon 1 65535 lservice 0}${goto 450}:${scroll 32 5${tcp_portmon 1 65535 rhost 0}}${goto 744}:${scroll 5 1 ${tcp_portmon 1 65535 rservice 0}}
 $color${tcp_portmon 1 65535 lservice 1}${goto 50}:${scroll 32 5${tcp_portmon 1 65535 rhost 1}}${goto 345}:${scroll 5 2${tcp_portmon 1 65535 rservice 1}}${goto 405}${tcp_portmon 1 65535 lservice 2}${goto 450}:${scroll 32 5${tcp_portmon 1 65535 rhost 2}}${goto 744}:${scroll 5 1 ${tcp_portmon 1 65535 rservice 2}}
 $color${tcp_portmon 1 65535 lservice 3}${goto 50}:${scroll 32 5${tcp_portmon 1 65535 rhost 3}}${goto 345}:${scroll 5 2${tcp_portmon 1 65535 rservice 3}}${goto 405}${tcp_portmon 1 65535 lservice 4}${goto 450}:${scroll 32 5${tcp_portmon 1 65535 rhost 4}}${goto 744}:${scroll 5 1 ${tcp_portmon 1 65535 rservice 4}}
 $color${tcp_portmon 1 65535 lservice 5}${goto 50}:${scroll 32 5${tcp_portmon 1 65535 rhost 5}}${goto 345}:${scroll 5 2${tcp_portmon 1 65535 rservice 5}}${goto 405}${tcp_portmon 1 65535 lservice 6}${goto 450}:${scroll 32 5${tcp_portmon 1 65535 rhost 6}}${goto 744}:${scroll 5 1 ${tcp_portmon 1 65535 rservice 6}}
 $color${tcp_portmon 1 65535 lservice 7}${goto 50}:${scroll 32 5${tcp_portmon 1 65535 rhost 7}}${goto 345}:${scroll 5 2${tcp_portmon 1 65535 rservice 7}}${goto 405}${tcp_portmon 1 65535 lservice 8}${goto 450}:${scroll 32 5${tcp_portmon 1 65535 rhost 8}}${goto 744}:${scroll 5 1 ${tcp_portmon 1 65535 rservice 8}}
-${color grey}Top CPU%          CPU%  MEM%       ${goto 257}${color grey} | ${color grey}Top Total Memory  RAM     VM                               ${goto 555}${color grey}| ${color grey}Top CPU TIME     MM:SS.cs
-${color red}${top name 1}${top cpu 1}${top mem 1} ${goto 257}${color grey} | ${color red}${top_mem name 1}${top_mem mem_res 1}  ${top_mem mem_vsize 1} ${goto 555}${color grey}| ${color red}${top_time name 1}${top_time time 1} ${top_time cpu 1}
-$color${top name 2}${top cpu 2}${top mem 2}       ${goto 257}${color grey} | ${color    }${top_mem name 2}${top_mem mem_res 2}  ${top_mem mem_vsize 2} ${goto 555}${color grey}| ${color    }${top_time name 2}${top_time time 2} ${top_time cpu 2}
-$color${top name 3}${top cpu 3}${top mem 3}       ${goto 257}${color grey} | ${color    }${top_mem name 3}${top_mem mem_res 3}  ${top_mem mem_vsize 3} ${goto 555}${color grey}| ${color    }${top_time name 3}${top_time time 3} ${top_time cpu 3}
-$color${top name 4}${top cpu 4}${top mem 4}       ${goto 257}${color grey} | ${color    }${top_mem name 4}${top_mem mem_res 4}  ${top_mem mem_vsize 4} ${goto 555}${color grey}| ${color    }${top_time name 4}${top_time time 4} ${top_time cpu 4}
-$color---------1---------2---------3---------4---------5---------6---------7---------8---------9---------0---------1
