correct hijra month & weekdays

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -61,8 +61,8 @@ ${color grey}Swap:${goto 48}${color green}${voffset 2}${swapbar 16,240}${color g
 ${color       }${voffset -20}${goto 110}$swap${goto 160}/ $swapmax
 ${color       }${alignr 525}${voffset -18}$swapperc%
 $color===========================================================================
-${color red}23 ${color grey}Dhū al-Ḥijjah ${color red}1436${color grey}${goto 225}Top CPU%          CPU%  MEM%       ${goto 460}${color grey} | ${color grey}Top Total Mem.  RAM     VM
-${color grey}al-Arbi‘ā’${color red}${goto 225}${top name 1}${goto 345}${top cpu 1}${top mem 1} ${goto 460}${color grey} | ${color red}${top_mem name 1}${goto 585}${top_mem mem_res 1}  ${top_mem mem_vsize 1}
+${color red}23 ${color grey}Dhū al-Hijjah ${color red}1436${color grey}${goto 225}Top CPU%          CPU%  MEM%       ${goto 460}${color grey} | ${color grey}Top Total Mem.  RAM     VM
+${color grey}al-Arbi'ā'${color red}${goto 225}${top name 1}${goto 345}${top cpu 1}${top mem 1} ${goto 460}${color grey} | ${color red}${top_mem name 1}${goto 585}${top_mem mem_res 1}  ${top_mem mem_vsize 1}
 $color-------------------------${goto 225}${top name 2}${goto 345}${top cpu 2}${top mem 2}       ${goto 460}${color grey} | ${color    }${top_mem name 2}${goto 585}${top_mem mem_res 2}  ${top_mem mem_vsize 2}
 ${color grey}Imsak$color${goto 70}05:18/04:45${goto 225}${top name 3}${goto 345}${top cpu 3}${top mem 3}       ${goto 460}${color grey} | ${color    }${top_mem name 3}${goto 585}${top_mem mem_res 3}  ${top_mem mem_vsize 3}
 ${color grey}Fajr$color${goto 70}05:28/05:15${goto 225}${top name 4}${goto 345}${top cpu 4}${top mem 4}       ${goto 460}${color grey} | ${color    }${top_mem name 4}${goto 585}${top_mem mem_res 4}  ${top_mem mem_vsize 4}
